gcc/testsuite/gfortran.dg/pr77506.f90
! { dg-do compile }
program foo
   print *, [character(len=*)::'ab','cd'] ! { dg-error "contain an asterisk" }
end program foo
